线程虚假唤醒问题

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <module>tjthread_ch01</module>
     <module>tjthread_ch02</module>
     <module>tjthread_ch03</module>
+    <module>tjthread_ch04</module>
   </modules>
 
   <dependencies>
